--- a/myblog.html
+++ b/myblog.html
@@ -23,23 +23,32 @@
     <div id="textbackground3">
         <h2>个人简介</h2>
             <p id="p3",style="text-align:justify;">
-                &nbsp;性别：女<br><br>
-                &nbsp;出生日期：2004年12月23日<br><br>
-                &nbsp;QQ邮箱:1424215456@qq.com<br><br>
-                &nbsp;联系电话：18958973689<br><br>
-                &nbsp;曾就读于龙港市龙苗幼儿园；龙港市第三小学；龙港市实验中学；苍南中学。现为宁波大学2023级应用心理学本科生。
+                &nbsp;性别：女<br>
+                &nbsp;出生日期：2004年12月23日<br>
+                &nbsp;QQ邮箱:1424215456@qq.com<br>
+                &nbsp;联系电话：18958973689<br>
+                &nbsp;曾就读于龙港市龙苗幼儿园；龙港市第三小学；龙港市实验中学；苍南中学。现为宁波大学2023级应用心理学本科生。<br>
             </p>
         
     </div>
     <div id="textbackground4">
         <h2>最新动态</h2>
-        <p id="p3"><br>&nbsp;2025.10.19<br><br>
-            &nbsp;&nbsp;我的余额有一点爱我<br><br>
+        <p id="p3"><br>&nbsp;2025.10.16<br>
+            &nbsp;&nbsp;天各一方的八卦图<br>
             <span>
-                <img id="img4" src="./img/2025-10-19.jpg">
+                <video id="img5" controls >
+                    <source src="./video/2025-10-16.mp4" type="video/mp4" >
+                    您的浏览器不支持 video 标签。
+                </video>
             </span>
         </p>
-        <p id="p3"><br>&nbsp;2025的十一中秋小长假<br><br>
+        <p id="p3"><br>&nbsp;2025.10.19<br>
+            &nbsp;&nbsp;我的余额有一点爱我<br>
+            <span>
+                <img id="img5" src="./img/2025-10-19.jpg" >
+            </span>
+        </p>
+        <p id="p3"><br>&nbsp;2025的十一中秋小长假<br>
             <span>
                 <img id="img4" src="./img/g/g1.jpg" alt="g1">
                 <img id="img4" src="./img/g/g2.jpg" alt="g2">
